--- a/Tier1/Random-Number-Generator/index.html
+++ b/Tier1/Random-Number-Generator/index.html
@@ -36,10 +36,10 @@
             </div>
             
             <div class="input-group">
-                <p id="type">Tipo:</p>
+                <p id="type">Type:</p>
                 <select id="numberType" class="number-type-select">
-                  <option value="integer">Inteiro</option>
-                  <option value="negative">Negativo</option>
+                  <option value="integer">Full</option>
+                  <option value="negative">Negative</option>
                   <option value="decimal">Decimal</option>
                 </select>
               </div>
